# alphazero

./: .gitignore  README.md  pyproject.toml  requirements.txt
alphazero/: __main__.py  arena.py  base.py  contests.py  download.py  game_cli.py  game_ui.py  mcts.py  players.py  plots.py  run.sh  sandbox.ipynb  schedulers.py  tests.py  timer.py  timers.py  trainer.py  trainers.py  utils.py  visualization.py
alphazero/configs/: configs.py
alphazero/games/: board.py  configs.py  connect4.py  othello.py  othello_board.py  registers.py  tictactoe.py
docs/: help.txt
